# JustPay_Console

./: .gitignore  ActionDispatcher.hpp  CMakeLists.txt  MenuManager.hpp  Parser.hpp  README.md  main  main.cpp  main_qt.cpp  menu.json  parser.hpp
Entities/: DataObjects.hpp
Include/: MenuManager.h  Parser.h
Include/Entities/: DataObjects.h
Include/Models/: DataObjects.h
Include/Repositories/: BaseRepository.h  EmployeeRepository.h
Include/Services/: AppContext.h  EmployeeService.h
Include/UI/: Add_Dependent_Dialog.h  Add_Emergency_Contact_Dialog.h  Add_Employee_Dialog.h  Employee_Select_Dialog.h
Include/UI/Components/: Employee_Select_Dialog.h  add_dependant.ui  add_emergency_contact.ui  add_employee_dialog.ui  add_loan_ledger.ui  add_overtime_hours.ui  add_time_log.ui  attendance_tracker.ui  attendance_tracker_item.ui  compute_payroll_dialog.ui  define_payroll_formula.ui  employee_attendance.ui  employee_select_dialog.ui  set_payroll_period.ui
Include/UI/Components/Headers/: Add_Dependent_Dialog.h  Add_Emergency_Contact_Dialog.h  Add_Employee_Dialog.h  Add_Loan_Ledger_Dialog.h  Add_Overtime_Hours_Dialog.h  Add_Time_Log_Dialog.h  Attendance_Tracker_Dialog.h  Attendance_Tracker_Item.h  Compute_Payroll_Dialog.h  Define_Payroll_Formula_Dialog.h  Employee_Attendance_Dialog.h  Employee_Select_Dialog.h  Set_Payroll_Period_Dialog.h  ui_employee_select_dialog.h
Include/Utils/: BaseMenu.h  DialogFactory.h  MenuManager.h  Parser.h
Include/modules/: AdminSettingsModule.h  Features.cpp  ReportsLogsModule.h
Repos/: BaseRepository.cpp  EmployeeRepository.cpp
Repos/Headers/: BaseRepository.hpp  EmployeeRepository.hpp
Resources/: menu.json
Services/: EmployeeService.cpp
Source/Repos/: BaseRepository.cpp  EmployeeRepository.cpp
Source/Services/: AppContext.cpp  EmployeeService.cpp
Source/Utils/: BaseMenu.cpp  DialogFactory.cpp  MenuManager.cpp  Parser.cpp
Tests/: TestRunner.cpp
UI/: BaseMenu.cpp  MenuManager.cpp
UI/Dialogs/: add_dependant.ui  add_dependent.ui  add_emergency_contact.ui  add_employee_dialog.ui  add_overtime_hours.ui  attendance_tracker.ui  compute_payroll_dialog.ui  define_payroll_formula.ui
UI/Windows/: Add_Dependent_Dialog.cpp  Add_Emergency_Contact_Dialog.cpp  Add_Employee_Dialog.cpp  Employee_Select_Dialog.cpp  MainWindow.cpp
UI/resources/: dark.qss  light.qss  win98.qss
UI/windows/AdminSettingsModule/: AdminSettingsModuleView.cpp  AdminSettingsView.cpp  ContributionTablesView.cpp  RoleManagerView.cpp
UI/windows/AttendanceTrackingModule/: AttendanceTrackingView.cpp
UI/windows/EmployeeManagementModule/: EmployeeAttendanceTrackerView.cpp  EmployeeManagementView.cpp  EmployeeModuleView.cpp  Employee_Select_Dialog.cpp  LoanLedgerView.cpp
UI/windows/Main/: MainWindow.cpp
UI/windows/PayrollComputationModule/: PayrollComputationView.cpp  PayrollFormulaView.cpp
UI/windows/PayslipGenerationModule/: GeneratePayslipView.cpp  PayslipGenerationView.cpp
UI/windows/ReportLogsModule/: GovernmentRemittanceView.cpp  ReportLogsModuleView.cpp  ReportLogsView.cpp  YearEndBenefitsView.cpp
data/: menu.json
include/: ActionDispatcher.hpp  BaseMenu.h  MainWindow.h  MenuManager.hpp  Parser.hpp
include/Repos/: BaseRepository.cpp  EmployeeRepository.h
include/Repos/Headers/: EmployeeRepository.hpp
include/Services/: EmployeeService.hpp
include/UI/: BaseView.h
include/UI/EmployeeManagement/: EmployeeAttendanceTrackerView.h  LoanLedgerView.h
include/modules/: AdminSettingsModule.hpp  AttendanceTrackingModule.h  AttendanceTrackingModule.hpp  DataObjects.hpp  EmployeeManagementModule.h  EmployeeManagementModule.hpp  Features.cpp  PayrollComputationModule.h  PayrollComputationModule.hpp  PayslipGenerationModule.h  PayslipGenerationModule.hpp  ReportsLogsModule.hpp
src/: ActionDispatcher.cpp  Parser.cpp
src/Entities/: DataObjects.hpp
src/Repos/: BaseRepository.cpp  EmployeeRepository.cpp
src/Repos/Headers/: BaseRepository.hpp
src/Services/: EmployeeService.cpp
src/modules/: AdminSettingsModule.cpp  AttendanceTrackingModule.cpp  EmployeeManagementModule.cpp  PayrollComputationModule.cpp  PayslipGenerationModule.cpp  ReportsLogsModule.cpp
(+15 files in other folders)
